--- a/app/src/main/res/layout/activity_voca_list.xml
+++ b/app/src/main/res/layout/activity_voca_list.xml
@@ -6,12 +6,22 @@
     android:layout_height="match_parent"
     tools:context=".VocaListActivity">
 
+
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:id="@+id/vocalist_progressText"
+        />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/vocalist_recyclerview"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/vocalist_progressText"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="580dp"
         tools:listitem="@layout/items_voca_list"
         />
 
