--- a/app/src/main/res/layout/items_voca_list.xml
+++ b/app/src/main/res/layout/items_voca_list.xml
@@ -10,11 +10,11 @@
             type="com.example.devvoca.VocaListAdapter.ViewHolder" />
     </data>
 
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="25dp"
+        android:layout_height="101dp"
+        android:paddingBottom="10dp"
+        android:paddingTop="10dp"
         >
 
         <TextView
@@ -23,14 +23,18 @@
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:text="단어 이름"/>
+            android:textSize="24sp"
+            android:text="Nice"/>
 
         <TextView
             android:id="@+id/items_voca_list_vocaSpelling"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:textSize="16sp"
             app:layout_constraintLeft_toRightOf="@id/items_voca_list_vocaName"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toTopOf="@id/items_voca_list_vocaName"
+            app:layout_constraintBottom_toBottomOf="@id/items_voca_list_vocaName"
             android:text="[발음 기호]"/>
 
         <TextView
@@ -40,8 +44,10 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="20dp"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:text="해석 이 들어가는 공간"/>
+            app:layout_constraintTop_toTopOf="@id/items_voca_list_vocaName"
+            app:layout_constraintBottom_toBottomOf="@id/items_voca_list_vocaName"
+            android:textSize="20sp"
+            android:text="v.동사;n.명사"/>
 
         <TextView
             android:id="@+id/items_voca_list_example"
@@ -50,7 +56,8 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/items_voca_list_vocaName"
             android:layout_marginTop="10dp"
-            android:text="예제 문장이 들어가는 공간"/>
+            android:textSize="14sp"
+            android:text="He is so nice!"/>
 
         <TextView
             android:id="@+id/items_voca_list_exampleTranslate"
@@ -58,10 +65,19 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="20dp"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/items_voca_list_vocaName"
+            app:layout_constraintBottom_toBottomOf="@id/items_voca_list_example"
+            app:layout_constraintTop_toTopOf="@id/items_voca_list_example"
             android:layout_marginTop="10dp"
-            android:text="예제의 해석 이 들어가는 공간"/>
+            android:textSize="14sp"
+            android:text="그는 너무 멋져!"/>
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:background="@color/gray"
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
