HomeFragment Menu Button 기능 관련 파일 추가 및 수정 진행중

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -15,4 +15,8 @@
         <item name="android:color" >@color/purple_500</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="Theme.DevVoca.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.DevVoca.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
