--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,7 +10,13 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" >@color/white</item>
+        <item name="android:windowLightStatusBar" >true</item>
+        <item name="android:color" >@color/purple_500</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="Theme.DevVoca.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.DevVoca.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
