--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,26 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
+    app:startDestination="@+id/nav_home">
 
     <fragment
-        android:id="@+id/navigation_home"
-        android:name="com.example.devvoca.HomeFragment"
-        android:label="@string/home_fragment"
-        tools:layout="@layout/fragment_home">
-    </fragment>
+        android:id="@+id/nav_gallery"
+        android:name="com.example.devvoca.gallery.GalleryFragment"
+        android:label="@string/menu_gallery"
+        tools:layout="@layout/fragment_gallery" />
 
     <fragment
-        android:id="@+id/navigation_favorite"
-        android:name="com.example.devvoca.FavoriteFragment"
-        android:label="@string/favorite_fragment"
-        tools:layout="@layout/fragment_favorite" >
-    </fragment>
-
-    <fragment
-        android:id="@+id/navigation_my_page"
-        android:name="com.example.devvoca.VocaListFragment"
-        android:label="@string/my_page_fragment"
-        tools:layout="@layout/fragment_voca_list" >
-    </fragment>
+        android:id="@+id/nav_slideshow"
+        android:name="com.example.devvoca.slideshow.SlideshowFragment"
+        android:label="@string/menu_slideshow"
+        tools:layout="@layout/fragment_slideshow" />
 </navigation>
