--- a/app/src/main/res/layout/items_voca_list.xml
+++ b/app/src/main/res/layout/items_voca_list.xml
@@ -77,6 +77,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:background="@color/gray"
+            android:layout_marginRight="20dp"
             />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
