--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -75,13 +75,44 @@
                 />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/myPage_MidPanel"
+            android:layout_marginTop="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintHeight_percent="0.25"
+            app:layout_constraintTop_toBottomOf="@id/myPage_topPanel"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:background="@color/gray">
+
+            <TextView
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:text="나의 즐겨찾기 목록"
+                android:textSize="24sp"
+                />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_marginTop="40dp"
+                android:id="@+id/myPage_favoriteView"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layout_constraintHeight_percent="0.7"
+                tools:listitem="@layout/items_favoritevoca_group"
+                tools:itemCount="5"
+                />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <LinearLayout
+            android:id="@+id/myPage_BottomPanel"
             android:layout_marginTop="50dp"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintHeight_percent="0.2"
-            app:layout_constraintTop_toBottomOf="@id/myPage_topPanel"
+            app:layout_constraintHeight_percent="0.25"
+            app:layout_constraintTop_toBottomOf="@id/myPage_MidPanel"
             app:layout_constraintLeft_toLeftOf="parent"
             android:orientation="vertical"
             android:background="@color/gray">
@@ -104,35 +135,7 @@
 
         </LinearLayout>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/myPage_BottomPanel"
-            android:layout_marginTop="20dp"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintHeight_percent="0.35"
-            app:layout_constraintTop_toBottomOf="@id/myPage_MidPanel"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:background="@color/gray">
 
-            <TextView
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="학습단어 분포 목록이에요"
-                android:textSize="24sp"
-                />
-
-
-            <com.github.mikephil.charting.charts.PieChart
-                android:id="@+id/myPage_ChartView"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="20dp"
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
