클린아키텍처 패턴 적용(우선은 계층만 분리하고 코드는 그대로임)

--- a/app/src/main/res/layout/items_voca_list.xml
+++ b/app/src/main/res/layout/items_voca_list.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
             name="item"
-            type="com.example.devvoca.VocaListAdapter.ViewHolder" />
+            type="com.example.devvoca.presentation.fragmentadapter.VocaListAdapter" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
