--- a/app/src/main/res/layout/fragment_voca_list.xml
+++ b/app/src/main/res/layout/fragment_voca_list.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_marginTop="20dp"
     android:layout_marginHorizontal="5dp"
-    tools:context=".VocaListFragment">
+    tools:context=".presentation.view.VocaListFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
