--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -7,21 +7,21 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.example.devvoca.HomeFragment"
+        android:name="com.example.devvoca.presentation.view.HomeFragment"
         android:label="@string/favorite_fragment"
         tools:layout="@layout/fragment_home" >
     </fragment>
 
     <fragment
         android:id="@+id/navigation_favorite"
-        android:name="com.example.devvoca.VocaListFragment"
+        android:name="com.example.devvoca.presentation.view.VocaListFragment"
         android:label="@string/favorite_fragment"
         tools:layout="@layout/fragment_voca_list" >
     </fragment>
 
     <fragment
         android:id="@+id/navigation_my_page"
-        android:name="com.example.devvoca.MyPageFragment"
+        android:name="com.example.devvoca.presentation.view.MyPageFragment"
         android:label="@string/my_page_fragment"
         tools:layout="@layout/fragment_my_page" >
     </fragment>
