--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".MyPageFragment"
+    tools:context=".presentation.view.MyPageFragment"
     android:layout_marginTop="20dp"
     android:layout_marginHorizontal="5dp"
     >
@@ -58,21 +58,89 @@
                 android:textSize="24sp"
                 />
 
-        <TextView
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="50dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="100일동안 500개의 단어를 학습햿어요"
-           />
+            <LinearLayout
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
+                >
+                <TextView
+                    android:id="@+id/mypage_logincount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="100"
+                    android:textSize="18sp"
+                    />
 
-            <TextView
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="일동안 "
+                    />
+
+                <TextView
+                    android:id="@+id/mypage_study_VocaCount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="XXX"
+                    android:textSize="18sp"
+                    />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="개의 단어를 학습하셨어요!"
+                    />
+
+            </LinearLayout>
+
+
+
+
+
+            <LinearLayout
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginTop="80dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="최대 연속 학습일은 XX일이고 상위 40%에요!"
-                />
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="최대 연속 학습일은 "
+                    />
+
+                <TextView
+                    android:id="@+id/mypage_study_streak"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="XXX"
+                    android:textSize="16sp"
+                    />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="일이고 랭킹은 "
+                    />
+
+                <TextView
+                    android:id="@+id/mypage_study_rank"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="XXX"
+                    android:textSize="16sp"
+                    />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="위 입니다!"
+                    />
+
+            </LinearLayout>
+
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
