--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -179,7 +179,7 @@
             android:layout_marginTop="50dp"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintHeight_percent="0.25"
+            app:layout_constraintHeight_percent="0.3"
             app:layout_constraintTop_toBottomOf="@id/myPage_MidPanel"
             app:layout_constraintLeft_toLeftOf="parent"
             android:orientation="vertical"
@@ -198,7 +198,8 @@
                 android:id="@+id/myPage_badgeView"
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="200dp"
+                tools:listitem="@layout/items_mybadge"
                 />
 
         </LinearLayout>
