내가 즐겨찾기한 Group을 가져오는 로직 추가

--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -60,13 +60,23 @@
                 android:layout_marginTop="5dp"
                 android:id="@+id/progress_image"
                 android:layout_width="35dp"
-                android:layout_height="35dp"
+                android:layout_height="match_parent"
                 android:src="@drawable/baseline_label_important_24"/>
 
-            <Spinner
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginLeft="20dp"
+                android:text="태그 선택"
+                android:layout_gravity="center"
+                android:gravity="center"
+                />
+
+            <Spinner
+                android:id="@+id/favorite_listItem"
+                android:layout_marginLeft="50dp"
                 android:layout_width="200dp"
-                android:layout_height="35dp"
+                android:layout_height="match_parent"
                 />
 
         </LinearLayout>
