--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -85,7 +85,7 @@
 
             </LinearLayout>
 
-            <LinearLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_marginStart="30dp"
                 android:layout_marginEnd="30dp"
                 android:layout_marginTop="10dp"
@@ -98,33 +98,53 @@
                 >
 
                 <TextView
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="30dp"
                     android:text="90%"
                     android:textSize="18sp"
                     />
                 <ProgressBar
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginTop="15dp"
+                    android:id="@+id/home_progressbar"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                     />
 
                 <TextView
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/home_progressbar"
                     android:layout_width="match_parent"
-                    android:layout_height="40dp"
+                    android:layout_height="25dp"
                     android:text="목표 달성에 거의 도착하였습니다!"
                     android:textSize="18sp"
                     />
 
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
+                    app:layout_constraintLeft_toLeftOf="@id/home_progressbar"
+                    app:layout_constraintTop_toBottomOf="@id/home_progressbar"
+                    android:layout_marginTop="30dp"
+                    android:layout_width="150dp"
+                    android:layout_height="25dp"
                     android:text="좀만 더 힘내세요!"
                     android:textSize="18sp"
                     />
 
+                <Button
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/home_progressbar"
+                    android:layout_width="150dp"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="25dp"
+                    android:text="학습하기"/>
 
-            </LinearLayout>
+
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <LinearLayout
                 android:layout_marginStart="45dp"
