화면 추가 및 item.xml 추가
StudyFragment 추가
TodayFragment 추가
SearchFragment 추가
각 Fragment에 Viewmodel, Binding 추가

HomeFragment에서 진척도, 오늘의 단어 버튼 누를 시 해당 Fragment로 이동
이동 버튼은 디자인 X

SearchFragment 구현을 위한
items_search_list 추가
해당 list 구현 진행 중

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -93,6 +93,12 @@
                 android:background="@drawable/di_off"
                 android:layout_width="match_parent"
                 android:layout_height="150dp">
+
+                <Button
+                    android:id="@+id/progress_btn"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
+
             </LinearLayout>
 
             <LinearLayout
@@ -125,6 +131,11 @@
                 android:background="@drawable/di_off"
                 android:layout_width="match_parent"
                 android:layout_height="150dp">
+
+                <Button
+                    android:id="@+id/today_btn"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
             </LinearLayout>
 
         </LinearLayout>
