--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -10,6 +10,15 @@
         android:name="com.example.devvoca.HomeFragment"
         android:label="@string/favorite_fragment"
         tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_navigation_home_to_studyFragment"
+            app:destination="@id/studyFragment" />
+        <action
+            android:id="@+id/action_navigation_home_to_todayFragment"
+            app:destination="@id/todayFragment" />
+        <action
+            android:id="@+id/action_navigation_home_to_searchFragment"
+            app:destination="@id/searchFragment" />
     </fragment>
 
     <fragment
@@ -25,4 +34,19 @@
         android:label="@string/my_page_fragment"
         tools:layout="@layout/fragment_my_page" >
     </fragment>
+    <fragment
+        android:id="@+id/studyFragment"
+        android:name="com.example.devvoca.study.StudyFragment"
+        android:label="fragment_study"
+        tools:layout="@layout/fragment_study" />
+    <fragment
+        android:id="@+id/todayFragment"
+        android:name="com.example.devvoca.today.TodayFragment"
+        android:label="fragment_today"
+        tools:layout="@layout/fragment_today" />
+    <fragment
+        android:id="@+id/searchFragment"
+        android:name="com.example.devvoca.search.SearchFragment"
+        android:label="fragment_search"
+        tools:layout="@layout/fragment_search" />
 </navigation>
