검색 기능 추가 수정 진행 - 검색어를 모두 지웠을 때, Home Fragment로 복귀되는 현상 수정 - 단어, 풀이를 통해서 검색 가능하게 수정 - 단어 입력 이전에는 리사이클러뷰가 표시되지 않게끔 수정 - 검색 단어 리사이클러뷰 구조 일부 수정 진행 - build.gradle 정리 - Manifest screenOrientation 삭제 - SearchView 전용 테마 추가 - WOrd Class 일부 수정

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -11,15 +11,18 @@
         android:id="@+id/searchView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
+        android:closeIcon="@drawable/baseline_clear_24"
         android:iconifiedByDefault="false"
         android:paddingTop="5dp"
-        android:paddingBottom="5dp" />
+        android:paddingBottom="5dp"
+        android:queryHint="검색어를 입력하시오"
+        app:queryBackground="@drawable/searchview_background"
+        app:showAsAction="always"
+        app:theme="@style/AppTheme.searchVIew" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/search_hint"
+        android:id="@+id/search_recycle"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:listitem="@layout/items_search_hint_list" />
+        android:layout_height="match_parent" />
 
 </LinearLayout>
